@@ -14,6 +14,7 @@ Verilator 5.027 devel
 **Minor:**
 
 * Fix fusing macro arguments to not ignore whitespace (#5061). [Tudor Timi]
+* Fix mis-removing $value$plusargs calls (#5127) (#5137). [Seth Pellegrino]
 
 
 Verilator 5.026 2024-06-15
